test/valid/fc36994_TestNew/NewTest.plume
/**
 * For testing new
 * @author 36994, César Santos
 */
class NewTest extends Object is
  method override toString : () -> String is
    "ola!"