test/invalid/fc36994_TestOverride/InvalidOverrideTest.plume
/**
 * For testing override
 * @author 36994, César Santos
 */
class InvalidOverrideTest extends DefinesMethod is
  override method wrongTest : () -> Boolean is
    true